# tep

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  pyproject.toml
contests/atcoder/abc298/: a.py  b.py
contests/atcoder/abc300/: a.py
contests/atcoder/abc301/: a.py  b.py
contests/atcoder/abc302/: a.py  b.py
contests/atcoder/abc303/: a.py  b.py
contests/atcoder/abc304/: a.py  b.py
contests/atcoder/abc306/: a.py  b.py  c.py
contests/atcoder/abc307/: a.py  b.py  d.py
contests/atcoder/abc309/: a.py
contests/atcoder/abc317/: a.py  b.py
contests/atcoder/abc318/: a.py
contests/atcoder/abc319/: a.py  b.py
contests/atcoder/abc320/: a.py  b.py
contests/atcoder/abc321/: a.py
contests/atcoder/abc323/: a.py  b.py  c.py
contests/atcoder/abc324/: a.py
contests/atcoder/abc325/: a.py  b.py  c.py
contests/codeforces/871/: a.py
contests/codeforces/898/: b.py  c.py
exercises/01/c/: code.py
exercises/01/g/: code.py
exercises/01/is_your_horseshoe_on_the_other_hoof/: in.txt
exercises/01/k/: code.cpp
exercises/01/l/: code.py
exercises/01/roadwork/: code.py  code.py.lprof
exercises/01/roadwork/inputs/: 2.txt
exercises/01/round_one/: test.sh
exercises/06/c/: code.cpp
exercises/2023/1/01/a/: code.py
exercises/2023/1/01/l/: test.sh
exercises/2023/1/06/c/: test.sh
listas/lista_01/boy_or_girl/: code.py
listas/lista_01/colorful_transceivers/: code.cpp  in.txt  test.sh
listas/lista_01/round_one/: test.sh
scripts/: test-cpp.sh  test-many.sh  test-python.sh  test.sh
templates/: template.cpp  template.py
(+54 files in other folders)
