[tool.poetry]
name = "tep"
version = "0.1.0"
description = "Códigos contendo a resolução das listas de exercícios de Tópicos Especiais de Programação."
authors = ["kyomi <personal@kyomi.codes>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
line-profiler = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
